--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node dist/game.js"
+    "start": "node dist/src/index.js"
   },
   "keywords": [],
   "author": "",
